Also apply z-index to wrapper, so that clipboard button does not stick out when a fixed sidebar is used

--- a/core/scss/prototype.scss
+++ b/core/scss/prototype.scss
@@ -47,6 +47,7 @@ $br-styleguide-content-padding-left: 4.8rem*$br-rem-multiplier !default;
   right: 0;
   bottom: 0;
   height: 100vh;
+  z-index: 3000;
 }
 
 /* Basic setup
